--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.driverLocation=D:/java/maven_repo/repo_knowledge_test/mysql/mysql-connector-java/5.1.6
+#db.driverLocation=D:/java/maven_repo/repo_knowledge_test/mysql/mysql-connector-java/5.1.6/mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://192.168.20.138:3306/lc_mall?characterEncoding=utf-8
 db.username=root
