--- a/src/main/resources/lcmall.properties
+++ b/src/main/resources/lcmall.properties
@@ -2,3 +2,6 @@ ftp.server.ip=你的FTP服务器ip地址
 ftp.user=mmallftp
 ftp.pass=ftppassword
 ftp.server.http.prefix=http://img.happymmall.com/
+
+#对密码加盐的盐值
+password.salt=lcsdafaqj23ou89ZXcj@#$#@KJdjklj;D./dSF
