--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -4,6 +4,17 @@ db.url=jdbc:mysql://192.168.20.138:3306/lc_mall?characterEncoding=utf-8
 db.username=root
 db.password=123456
 
+jdbc.master.driver=com.mysql.jdbc.Driver
+jdbc.master.url=jdbc:mysql://127.0.0.1:3306/lc_mall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+jdbc.master.username=root
+jdbc.master.password=123456
+
+jdbc.slave01.driver=com.mysql.jdbc.Driver
+jdbc.slave01.url=jdbc:mysql://192.168.20.138:3306/lc_mall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+jdbc.slave01.username=root
+jdbc.slave01.password=123456
+
+
 db.initialSize=20
 db.maxActive=50
 db.maxIdle=20
