实现了第一版数据库读写分离并验证完毕

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,9 +1,13 @@
+
+#使用mybatis generator的时候生成po、mapper和dao ---start
 #db.driverLocation=D:/java/maven_repo/repo_knowledge_test/mysql/mysql-connector-java/5.1.6/mysql-connector-java-5.1.6.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://192.168.20.138:3306/lc_mall?characterEncoding=utf-8
 db.username=root
 db.password=123456
+#使用mybatis generator的时候生成po、mapper和dao ---end
 
+#读写分离，两个数据库-----start
 jdbc.master.driver=com.mysql.jdbc.Driver
 jdbc.master.url=jdbc:mysql://127.0.0.1:3306/lc_mall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 jdbc.master.username=root
@@ -13,8 +17,9 @@ jdbc.slave01.driver=com.mysql.jdbc.Driver
 jdbc.slave01.url=jdbc:mysql://192.168.20.138:3306/lc_mall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 jdbc.slave01.username=root
 jdbc.slave01.password=123456
+#读写分离，两个数据库-------end
 
-
+#数据库连接池配置---start
 db.initialSize=20
 db.maxActive=50
 db.maxIdle=20
@@ -22,3 +27,4 @@ db.minIdle=10
 db.maxWait=10
 db.defaultAutoCommit=true
 db.minEvictableIdleTimeMillis=3600000
+#数据库连接池配置---end
