完善初版读写分离并支持一主多从

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -17,6 +17,11 @@ jdbc.slave01.driver=com.mysql.jdbc.Driver
 jdbc.slave01.url=jdbc:mysql://192.168.20.138:3306/lc_mall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
 jdbc.slave01.username=root
 jdbc.slave01.password=123456
+
+jdbc.slave02.driver=com.mysql.jdbc.Driver
+jdbc.slave02.url=jdbc:mysql://192.168.20.139:3306/lc_mall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+jdbc.slave02.username=root
+jdbc.slave02.password=123456
 #读写分离，两个数据库-------end
 
 #数据库连接池配置---start
