添加注释，其他小修改

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -7,7 +7,7 @@ db.username=root
 db.password=123456
 #使用mybatis generator的时候生成po、mapper和dao ---end
 
-#读写分离，两个数据库-----start
+#读写分离，一主多从数据库-----start
 jdbc.master.driver=com.mysql.jdbc.Driver
 
 jdbc.master.url=jdbc:mysql://127.0.0.1:3306/lc_mall?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
