--- a/src/main/resources/lcmall.properties
+++ b/src/main/resources/lcmall.properties
@@ -1,7 +1,26 @@
 ftp.server.ip=你的FTP服务器ip地址
 ftp.user=mmallftp
 ftp.pass=ftppassword
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.http.prefix=http://img.lcmall.com/
 
 #对密码加盐的盐值
 password.salt=lcsdafaqj23ou89ZXcj@#$#@KJdjklj;D./dSF
+
+#redis config start
+redis1.ip=192.168.20.138
+redis2.ip=192.168.20.139
+redis1.port=6379
+redis2.port=6379
+redis1.pwd=lc
+redis2.pwd=lc
+#最大连接数
+redis.max.total=20
+#最大空闲数
+redis.max.idle=10
+#最小空闲数
+redis.min.idle=2
+#从jedis连接池获取连接时，校验并返回可用的连接
+redis.test.borrow=false
+#把连接放回redis连接池时，校验并返回可用的连接
+redis.test.return=false
+#redis config end
