--- a/pom.xml
+++ b/pom.xml
@@ -233,12 +233,13 @@
       <artifactId>spring-session-data-redis</artifactId>
       <version>1.2.0.RELEASE</version>
     </dependency>
+
+    <!--redisson官方jar和依赖的fasterxml jar-->
     <dependency>
       <groupId>org.redisson</groupId>
       <artifactId>redisson</artifactId>
       <version>2.9.0</version>
     </dependency>
-
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-avro</artifactId>
